implements delete todo function. add react-router. and add footer component.

--- a/src/resource/css/main.css
+++ b/src/resource/css/main.css
@@ -33,7 +33,7 @@
 }
 
 .Todo-App {
-    padding-top: 40px;
+    padding-top: 20px;
     display: inline-block;
     text-align: left;
 }
@@ -67,4 +67,26 @@ li {
     left: 50%;
     margin-left: -100px;
     top: 200px;
+}
+
+li span.delete-item {
+    visibility: hidden;
+}
+
+span.delete-item button {
+    background: none;
+    border: none;
+    font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+    color: red;
+}
+
+li:hover span.delete-item {
+    visibility: visible;
+}
+
+a {
+    padding-left: 2px;
+    padding-right: 2px;
 }
